[package]
name = "cryptobot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json"] }
teloxide = "0.12"
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
redis = "0.23.0"
clap = { version = "4.4", features = ["derive"] }
